# Sift

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LABELS_AND_SKILLS.md  LICENSE  PIPELINE.md  README.md  TOOLS.md  _clip_fetch.py  _clip_helpers.py  _clip_library.py  _clip_publish.py  _clip_queue.py  _clip_reframe.py  _clip_render.py  _clip_select.py  _clip_transcript.py  docker-compose.yml  engine.py  mcp.json  pyproject.toml  server.py  tokens.example.json
.github/workflows/: ci.yml  release.yml
caddy/: Caddyfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OUTPUT_CONTRACT.md  TOOLS.md
install/: install.bat  install.sh
secrets/: README.md
shared/: __init__.py  auth.py  browse.py  file_utils.py  oauth.py  platform_utils.py  progress.py  receipt.py  version_control.py
skills/: README.md  argument.md  hot_take.md  joke.md  quote.md  reaction.md  story.md
tests/: conftest.py  test_engine.py  test_http.py  test_library.py  test_library_http.py  test_oauth.py
tests/fixtures/: no_blank_lines.vtt  rolling.vtt  sample.json3  sample.vtt
