[project]
name = "sift"
version = "0.1.0"
description = "Self-hosted MCP server that turns long-form video into short, publish-ready clips."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
dependencies = [
    "fastmcp==2.14.1",
    "yt-dlp==2025.10.22",
    "pillow==11.3.0",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
# Face-follow reframing. Heavy (~300 MB) and lazy-imported inside the render
# worker only; without it, reframe="speaker" degrades to a centered crop.
vision = [
    "mediapipe==0.10.21",
    "numpy>=1.26,<2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest==8.4.2",
    "pytest-timeout==2.4.0",
    "ruff==0.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
filterwarnings = ["ignore::DeprecationWarning"]
